kijani-capstone/k8s/kk-payments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kk-payments
  namespace: kijani-project
  annotations:
   kubernetes.io/change-cause: "Initial production-approaching deployment: v1.1.0"

spec:
  replicas: 3

  revisionHistoryLimit: 10

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1

  selector:
    matchLabels:
      app: kk-payments

  template:
    metadata:
      labels:
        app: kk-payments

    spec:
      containers:
        - name: kk-payments
          image: kk-payments:v1.1.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3001

          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
