kijani-capstone/k8s/kk-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kk-api
  namespace: kijani-project
spec:
  selector:
    app: kk-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
